testsuite/tests/indexed-types/should_fail/T13971.stderr

T13971.hs:7:3: error:
    • Illegal argument ‘*’ in:
        ‘type T @{k} @(*) a = Int’
        The arguments to ‘T’ must all be distinct type variables
    • In the default type instance declaration for ‘T’
      In the class declaration for ‘C’
